# GoMind

./: .env.example  .gitignore  readme.md
deploy/: docker-compose.yml
docs/: GoMind接口测试文档.postman_collection.json
server-go/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
server-go/common/code/: code.go
server-go/common/email/: email.go
server-go/common/mysql/: mysql.go
server-go/common/rabbitmq/: init.go  message.go  rabbitmq.go
server-go/common/redis/: key.go  redis.go
server-go/config/: config.go
server-go/controller/kb/: kb.go
server-go/controller/session/: session.go
server-go/controller/user/: user.go
server-go/router/: kb.go  router.go  session.go
server-go/schema/: kb.go  message.go  session.go  user.go
server-go/utils/: utils.go
service-ai/: .dockerignore  Dockerfile  env_loader.py  pyproject.toml  readme.md
service-ai/api/: __init__.py  main.py  service.py
service-ai/globals/: __init__.py  global_pipeline.py
service-ai/pipeline/: __init__.py  pipeline.py
service-ai/pipeline/chunk/: __init__.py  chunk.py
service-ai/pipeline/embedding/: __init__.py  embedding.py  sparse_embedding.py
service-ai/pipeline/load/: __init__.py  load.py
service-ai/pipeline/storage/: __init__.py  qdrant.py
service-ai/pipeline/utils/: approx_token.py
service-ai/strategy/: __init__.py  schemas.py  service.py
web-frontend/: .dockerignore  Dockerfile  index.html  nginx.default.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web-frontend/src/: App.tsx  index.css  main.tsx
(+24 files in other folders)
